<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_wallets"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_nav_home"
            android:title="@string/menu_home" />
    </group>

    <group
        android:id="@+id/group_actions"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_import"
            android:icon="@drawable/ic_nav_import"
            android:title="@string/menu_import" />
        <item
            android:id="@+id/nav_export"
            android:icon="@drawable/ic_nav_export"
            android:title="@string/menu_export" />
        <item
            android:id="@+id/nav_transfer"
            android:icon="@drawable/ic_nav_transfer"
            android:title="@string/menu_transfer" />
    </group>
</menu>
