<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="org.archuser.wallet.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_import"
        android:name="org.archuser.wallet.ui.transfer.ImportFragment"
        android:label="@string/menu_import"
        tools:layout="@layout/fragment_import" />

    <fragment
        android:id="@+id/nav_export"
        android:name="org.archuser.wallet.ui.transfer.ExportFragment"
        android:label="@string/menu_export"
        tools:layout="@layout/fragment_export" />

    <fragment
        android:id="@+id/nav_transfer"
        android:name="org.archuser.wallet.ui.transfer.TransferFundsFragment"
        android:label="@string/menu_transfer"
        tools:layout="@layout/fragment_transfer_funds" />
</navigation>
